css/main.css
@font-face {
  font-family: 'SourceCodePro';
  src: url('/assets/fonts/SourceCodePro-Regular.otf') format('opentype');
}

body {
  font-family: Helvetica, sans-serif;
  font-size: 16px;
  margin: 0 0 0 0;
  background-color: #f5f5f5;
}

#header {
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.13);
  background-color: white;
  width: 100%;
}

nav {
  padding: 0 0 .3em 0;
  width: 100%;
}

#logo {
  width: 30%;
  height: auto;
  max-width: 200px;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#navmenu {
  list-style: inside;
  text-align: center;
  padding-left: 0;
  width: 90%;
  max-width: 80em;
  margin-bottom: 0;
}

#navmenu > li {
  color: #757575;
  display: inline-block;
  margin: 0 3% 0 3%;
}

.nodecor {
  text-decoration: none;
  color: inherit;
}

a:visited.nodecor {
  text-decoration: none;
  color: inherit;
}

#front-page {
  width: 100%;
  box-sizing: border-box;
  padding: 2.5% 2.5% 0 2.5%;
}

#terminal {
  font-family: SourceCodePro;
  display: inline-block;
  color: white;
  width: 45%;
  min-width: 25em;
  background-color: #1b1d1e;
  border-radius: 5px;
  box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.3);
  margin-right: 30px;
  padding: .5em 1em 1em 1em;
}

#terminal p {
  line-height: 1.8em;
  width: 100%;
} 

#terminal th, #terminal td {
  padding: 0 1em 0 0;
}


.terminal table {
  display: block;
  margin-bottom: 1em;
  width: 100%;
}

.blinking-cursor {
  display: inline;
  -webkit-animation: 1s blink step-end infinite;
  -moz-animation: 1s blink step-end infinite;
  -ms-animation: 1s blink step-end infinite;
  -o-animation: 1s blink step-end infinite;
  animation: 1s blink step-end infinite;
}

@keyframes "blink" {
  from, to {
    color: transparent;
  }
  50% {
    color: white;
  }
}

@-moz-keyframes blink {
  from, to {
    color: transparent;
  }
  50% {
    color: white;
  }
}

@-webkit-keyframes "blink" {
  from, to {
    color: transparent;
  }
  50% {
    color: white;
  }
}

@-ms-keyframes "blink" {
  from, to {
    color: transparent;
  }
  50% {
    color: white;
  }
}

@-o-keyframes "blink" {
  from, to {
    color: transparent;
  }
  50% {
    color: white;
  }
}

#introduction {
  display: inline-block;
  vertical-align: top;
  color: #515659;
  max-width: 45%;
  margin: 10% 0 0 0;
}

#introduction * {
  margin: 0;
}

#introduction h1 {
  font-size: 300%;
}

#introduction h2 {
  margin: .5em 0 .5em 0;
  color: #54ace3;
}

#resume {
  display: block;
  margin: 5% auto 0 auto;
  width: 50%;
  min-width: 100vw;
  vertical-align: top;
}

#tabs {
  display: inline-block;
  min-width: 9em;
  width: 20%;
  vertical-align: top;
}

#tabcontentcontainer {
  display: inline-block;
  min-width: 20em;
  width: 70%;
}

.tablink {
  display: block;
  float: right;
  margin: 0 1em 3em 100%;
  text-align: right;
  font-size: 125%;
  background-color: inherit;
  border: none;
  border-right: solid;
  outline: none;
  cursor: pointer;
  transition: 0.3s;
}

.tablink.active {
  border-color: #54ace3;
  color: #54ace3;
}

.tablink:hover {
  border-color: #6db6e3;
  color: #6db6e3;
}

.tabcontent {
  width: 100%;
  transition: fadeEffect 1s;
  -webkit-animation: fadeEffect 1s;
  -moz-animation: fadeEffect 1s;
  -ms-animation: fadeEffect 1s;
  -o-animation: fadeEffect 1s;
}

@keyframes fadeEffect {
  from {opacity: 0;}
  to {opacity: 1;}
}

@-webkit-keyframes fadeEffect {
  from {opacity: 0;}
  to {opacity: 1;}
}

@-moz-keyframes fadeEffect {
  from {opacity: 0;}
  to {opacity: 1;}
}

@-ms-keyframes fadeEffect {
  from {opacity: 0;}
  to {opacity: 1;}
}

@-o-keyframes fadeEffect {
  from {opacity: 0;}
  to {opacity: 1;}
}

.tabcontent h2 {
  margin: 0;
  color: #464646;
  line-height: 100%;
}

.tabheader {
  color: #5c5c5c;
}

.tabtitle {
  display: inline-block;
  box-sizing: border-box;
  width: 70%;
  margin: 0;
}

.tabright {
  display: inline-block;
  box-sizing: border-box;
  width: 30%;
  margin: 0;
  text-align: right;
}

.tabbody {
  color: slategray;
  white-space: normal;
  margin-bottom: 2em;
}

.tabbody ul {
  list-style-type: circle;
}

.tabbody ul>li {
  margin-bottom: .5em;
}

.tabbody table {
  margin-top: 1em;
}

.tabbody td, th {
  width: 12em;
  text-align: left;
}

.rightalign {
  float: right;
}

.postpreview {
  margin: 2em auto 0 auto;
  padding: .5em 1em .5em 1em;
  width: 80%;
  max-width: 800px;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.13);
  background-color: white;
}

.postthumbnail {
  display: inline-block;
  box-sizing: border-box;
  width: calc(35% - 1em);
  height: 100%;
  vertical-align: top;
}

.postimage {
  display: block;
  width: 100%;
  height: auto;
}

.postdetails {
  display: inline-block;
  box-sizing: border-box;
  width: calc(65% - 1em);
}

.posttitle {
  color: #464646;
}

.postblip {
  color: slategrey;
}

#article {
  margin: 2em auto 2em auto;
  padding: 2em;
  width: 90%;
  max-width: 1000px;
  box-sizing: border-box;
  background-color: white;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.13);
}

#articletitle {
  margin-bottom: 1em;
}

#articletitle h2, p {
  margin: 0;
}

#articletitle p {
  font-style: italic;
}

#articlecontent {
  line-height: 1.5em;
}

#articlecontent p {
  margin: 1.5em 0 1.5em 0;
}

#articlecontent li {
  margin-bottom: 1em;
}

#articlecontent img {
  max-width: 100%;
  height: auto;
}

.disclaimer {
  font-size: 12px;
}

blockquote {
  margin: 1.5em 1.5em 1.5em 0;
  padding-left: 1.5em;
  border-left: solid 2px #333333;
}

.collapsible {
  background-color: #dbdbdb;
  padding: 1em;
  border: none;
  outline: none;
  text-align: left;
  font-weight: bold;
  cursor: pointer;
  width: 100%;
  font-size: 100%;
}

.collapsible:after {
  content: '\02795';
  font-size: 80%;
  float: right;
  margin-left: 1em;
}

.collapsible.active:after {
  content: '\2796';
  font-size: 80%;
  float: right;
  margin-left: 1em;
}

.collapsiblecontent {
  padding: 0 1em;
  overflow: hidden;
  background-color: #e9e9e6;
  max-height: 0;
  transition: max-height .4s ease-out;
}

@media screen and (max-width: 910px) {
  #front-page {
    display: table;
    max-width: 95%;
    border-spacing: 0 2em;
    margin: 0 auto 0 auto;
  }

  #introduction {
    display: table-header-group;
  }

  #terminalcontainer {
    display: table-footer-group;
  }

  #terminal {
    display: block;
    width: 95%;
    box-sizing: border-box;
    margin: 0 auto 5% auto;
  }
}

@media screen and (max-width: 530px) {
  body {
    font-size: 14px;
  }

  #terminal {
    font-size: 3vw;
  }

  #tabs {
    min-width: 7em;
  }

  .tablink {
    font-size: 85%;
  }

  .postthumbnail {
    display: block;
    width: 70%;
    margin: auto;
  }

  .postdetails {
    display: block;
    width: 100%;
  }
}

@media screen and (max-width: 400px) {
  #tabs {
    display: block;
    width: 95%;
    margin: auto;
    text-align: center;
    margin-bottom: 1em;
  }

  .tablink {
    display: inline-block;
    float: none;
    margin: 0 0 1em 0;
    border: none;
    border-bottom: solid;
  }

  #tabcontentcontainer {
    display: block;
    margin: auto;
    width: 90%;
  }
}

